--- a/src/index.css
+++ b/src/index.css
@@ -2,72 +2,72 @@
 @tailwind components;
 @tailwind utilities;
 * {
-    --color-primary: #111827;
-    user-select: none;
-    -moz-user-select: none;
-    -webkit-user-drag: none;
-    -webkit-user-select: none;
-    -ms-user-select: none;
-
-    background-color: var(--color-primary);
-    color: white;
-
-    overflow: hidden;
+	--color-primary: #111827;
+	user-select: none;
+	-moz-user-select: none;
+	-webkit-user-drag: none;
+	-webkit-user-select: none;
+	-ms-user-select: none;
+	background-color: var(--color-primary);
+	color: white;
+	overflow: hidden;
 }
 
 .footer {
-    position: fixed;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    height: 50px;
-    background-color: #1f2937;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-size: 0.8rem;
-    font-weight: 500;
-    color: white;
-    z-index: 1;
-    outline: 0;
+	position: fixed;
+	bottom: 0;
+	left: 0;
+	right: 0;
+	height: 50px;
+	background-color: #1f2937;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	font-size: 0.8rem;
+	font-weight: 500;
+	color: white;
+	z-index: 1;
+	outline: 0;
 }
 
 h1 {
-    font-size: 4rem;
-    font-weight: 500;
-    margin: 0;
-    padding: 0;
-    display: flex;
-    justify-content: center;
+	font-size: 4rem;
+	font-weight: 500;
+	margin: 0;
+	padding: 0;
+	display: flex;
+	justify-content: center;
 }
+
 h2 {
-    font-size: 2rem;
-    font-weight: 500;
-    margin: 0;
-    padding: 0;
-    display: flex;
-    justify-content: center;
+	font-size: 2rem;
+	font-weight: 500;
+	margin: 0;
+	padding: 0;
+	display: flex;
+	justify-content: center;
 }
 
 .ytvid {
-    margin: 0 auto;
-    display: flex;
+	margin: 0 auto;
+	display: flex;
 }
 
 .yt-wrapper {
-
 }
 
 .green {
-    color: lime;
-    font-weight: bold;
+	color: lime;
+	font-weight: bold;
 }
+
 .blue {
-    color: aqua;
-    font-weight: bold;
+	color: aqua;
+	font-weight: bold;
 }
+
 .center-video {
-    margin-left: auto;
-    margin-right: auto;
-    display: block
+	margin-left: auto;
+	margin-right: auto;
+	display: block;
 }
